[package]
name = "qjsonrpc"
version = "0.2.3"
description = "JSON-RPC over QUIC comm"
authors = [ "bochaco <gabrielviganotti@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/qjsonrpc"
keywords = [ "quic" ]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "ping"

[dependencies]
futures = "~0.3"
log = "~0.4"
quinn = { version = "0.8.0", default-features = false, features = ["tls-rustls", "ring"] }
quinn-proto = "0.8.0"
rand = "~0.7"
rcgen = "~0.7"
rustls = { version = "0.20.2", default-features = false, features = ["quic", "dangerous_configuration"] }
serde_json = "1.0.62"
thiserror = "1.0.23"
url = "2.2.0"
webpki = "~0.21.3"

[dependencies.serde]
version = "1.0.123"
features = [ "derive" ]

[dev-dependencies]
assert_fs = "~1.0"
color-eyre = "~0.6"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
