[package]
name = "qjsonrpc"
version = "0.4.1"
description = "JSON-RPC over QUIC comm"
authors = [ "bochaco <gabrielviganotti@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/qjsonrpc"
keywords = [ "quic" ]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "ping"

[dependencies]
futures = "~0.3"
log = "~0.4"
quinn-proto = "0.8.0"
rand = "0.8"
rcgen = "~0.9"
serde_json = "1.0.62"
thiserror = "1.0.23"
url = "2.2.0"
webpki = "~0.21.3"

  [dependencies.quinn]
  version = "0.8.0"
  default-features = false
  features = [ "tls-rustls", "ring" ]

  [dependencies.rustls]
  version = "0.20.2"
  default-features = false
  features = [ "quic", "dangerous_configuration" ]

  [dependencies.serde]
  version = "1.0.123"
  features = [ "derive" ]

[dev-dependencies]
assert_fs = "~1.0"
color-eyre = "~0.6"
tempfile = "3"
tracing = "~0.1.26"
tracing-subscriber = "~0.2.15"

  [dev-dependencies.tokio]
  version = "1.17.0"
  features = [ "macros", "rt-multi-thread" ]
