[package]
name = "qjsonrpc"
version = "0.5.0"
description = "JSON-RPC over QUIC comm"
authors = [ "bochaco <gabrielviganotti@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/qjsonrpc"
keywords = [ "quic" ]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "ping"

[dependencies]
log = "~0.4.17"
quinn-proto = "0.9.2"
rand = "0.8.5"
rcgen = "~0.10.0"
serde_json = "1.0.93"
thiserror = "1.0.38"
url = "2.3.1"
webpki = "~0.22.0"

  [dependencies.quinn]
  version = "0.9.3"
  default-features = false
  features = [ "tls-rustls", "ring" ]

  [dependencies.rustls]
  version = "0.20.8"
  default-features = false
  features = [ "quic", "dangerous_configuration" ]

  [dependencies.serde]
  version = "1.0.152"
  features = [ "derive" ]

[dev-dependencies]
assert_fs = "~1.0"
color-eyre = "~0.6"
tempfile = "3.4"
tracing = "~0.1.37"
tracing-subscriber = { version = "~0.3.16", features = [ "env-filter" ] }

  [dev-dependencies.quinn]
  version = "0.9.3"
  default-features = false
  features = [ "tls-rustls", "ring", "runtime-tokio" ]

  [dev-dependencies.tokio]
  version = "1.26.0"
  features = [ "macros", "rt-multi-thread" ]
